--- a/module4/.vscode/settings.json
+++ b/module4/.vscode/settings.json
@@ -5,8 +5,11 @@
 // }
 
 {
-    "java.project.sourcePaths": ["Day2"],
+    "java.project.sourcePaths": [
+        "Day2",
+        "Day 4"
+    ],
     "java.project.referencedLibraries": [
-        "Day2/lib/postgresql-42.7.1.jar"
+        "Day2/lib/postgresql-42.7.3.jar"
     ]
 }
