--- a/module4/.vscode/settings.json
+++ b/module4/.vscode/settings.json
@@ -7,7 +7,8 @@
 {
     "java.project.sourcePaths": [
         "Day2",
-        "Day 4"
+        "Day 4",
+        "Day4"
     ],
     "java.project.referencedLibraries": [
         "Day2/lib/postgresql-42.7.3.jar"
